@@ -39,6 +39,12 @@ Version 1.7.0-svn:
       Hungarian, Indonesian, Italian, Lithuanian, Norwegian, Polish, Russian,
       Serbian, Slovak, Swedish, Turkish.
 
+  * Multiplayer
+    * Implemented automatic saving of game replays.
+    * Implemented the adminmsg command to allow players to send messages to
+      currently available admins. (FR #9218)
+    * Fixed bug #7547: Add possibility to unban/unmute in a multiplayer game
+
   * Units
     * Added the Water Serpent.
 
