@@ -80,6 +80,7 @@ Version 1.7.0-svn:
    * Implemented automatic saving of game replays.
    * Implemented the adminmsg command to allow players to send messages to
      currently available admins. (FR #9218)
+   * Fixed bug #7547: Add possibility to unban/unmute in a multiplayer game
  * Savegames
    * Providing a new simpler interface for dealing with savegames
  * User interface:
